# langchain-chat

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
data/cmmi/01.标准过程库/01.CMMI体系认证/01.体系概要/: 00-研发体系管理手册.md  01-软件生命周期模型.md
data/cmmi/03.组织度量库/01.组织级度量数据表/: 组织度量计划.xls.csv
data/cmmi/03.组织度量库/02.项目级度量数据表/2024年/: CMHK-ERP-项目测量表及分析表.xls.csv  CMHK-HR-项目测量表及分析表.xls.csv  PMS-项目测量表及分析表.xls.csv  中车财司-项目测量表及分析表.xls.csv  宁煤-项目测量表及分析表.xls.csv
data/cmmi/08.组织级工作区/01.EPG工作区/01.过程改进计划及建议/: 01-过程改进建议表.xls.csv  03-组织过程改进计划.doc.md
data/cmmi/08.组织级工作区/01.EPG工作区/05.阶段总结/: 07-过程改进总结报告-202406.doc.md  07-过程改进总结报告-202412.doc.doc.md  组织过程性能总结分析报告.doc.md
data/cmmi/08.组织级工作区/01.EPG工作区/06.会议记录/: TCG208 V1R0 - 会议记录20240422.md  TCG208 V1R0 - 会议记录20240426.md  TCG208 V1R0 - 会议记录20240517.md  TCG208 V1R0 - 会议记录20240524.md  TCG208 V1R0 - 会议记录20240531.md  TCG208 V1R0 - 会议记录20240607.md  TCG208 V1R0 - 会议记录20240614.md  TCG208 V1R0 - 会议记录20240624.md  TCG208 V1R0 - 会议记录20240628.md  TCG208 V1R0 - 会议记录20240705.md  TCG208 V1R0 - 会议记录20240709.md  TCG208 V1R0 - 会议记录20240719 .md  TCG208 V1R0 - 会议记录20240726.md  TCG208 V1R0 - 会议记录20240813 .md  (+1 more)
src/: load2vetor.py  pydantic_web.py  start_web.py  web_app.py
src/app_config/: app_config.py
src/book/: vetor_store.ipynb
src/langchain_chat/: load2vetor.py  pydantic_web.py  start_web.py  web_app.py
src/langchain_chat/app_config/: app_config.py
src/langchain_chat/book/: cmmi_doc2txt.ipynb
src/langchain_chat/main/: chat_agent.py  query_rag.py  vetor_store.py
src/main/: apps_shared.py  query_rag.py  vetor_store.py
(+92 files in other folders)
