[project]
# 这里对应包目录名为 src/langchain_chat
name = "langchain-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.21",
    "dashscope>=1.24.5",
    "fastapi>=0.119.1",
    "groq>=0.31.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.33",
    "markdown>=3.9",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
    "unstructured[md]>=0.18.14",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]


[project.scripts]
# load2vetor = "load2vetor:load"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"